# dde-calendar

./: .clog.toml  .gitignore  .packit.yaml  .project  .project.json  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  calendar.pro  calendarview.cpp  calendarview.h  calendarwindow.cpp  calendarwindow.h  dde-calendar.desktop  dde-calendar.pro  infoview.cpp  linglong.yaml  main.cpp  org.dde.calendar.install  resources.qrc  spinner.cpp  translate_desktop2ts.sh  translations.pri  weekindicator.cpp
.reuse/: dep5
.tx/: config  transifex.yaml
calendar-basicstruct/: CMakeLists.txt  commondatastruct.cpp  commondatastruct.h
calendar-basicstruct/src/: DebugTimeManager.cpp  DebugTimeManager.h  calendardatastruct.cpp  calendardatastruct.h  commondatastruct.cpp  commondatastruct.h  commondef.h  dbusdatastruct.cpp  dbusdatastruct.h  lunardatastruct.cpp  lunardatastruct.h  reminddata.cpp  reminddata.h  repetitionrule.cpp  repetitionrule.h  scheduledatainfo.cpp  scheduledatainfo.h  utils.cpp  utils.h
calendar-service/: CMakeLists.txt  calendarservice.cpp  calendarservice.h  main.cpp
calendar-service/assets/: dde-calendar-service.desktop  pinyin.dict  resources.qrc
calendar-service/assets/data/: com.dde.calendarserver.calendar.service  com.dde.calendarserver.calendar.timer  com.deepin.calendar.conf  com.deepin.dataserver.Calendar.service  com.deepin.dataserver.calendar.service  huangli.db
calendar-service/src/: calendarhuangli.cpp  calendarhuangli.h  calendarprogramexitcontrol.cpp  calendarprogramexitcontrol.h  calendarscheduler.cpp  calendarscheduler.h  calendarservice.cpp  calendarservice.h  csystemdtimercontrol.cpp  csystemdtimercontrol.h  jobremindmanager.cpp  jobremindmanager.h  main.cpp
calendar-service/src/LunarAndFestival/: celestialbodies.h  lunarandfestival.h  method_interface.cpp  method_interface.h
calendar-service/src/alarmManager/: dalarmmanager.cpp  dalarmmanager.h  dreminddata.cpp  dreminddata.h
calendar-service/src/calendarDataManager/: daccountmanagemodule.cpp  daccountmanagemodule.h  daccountmodule.cpp  daccountmodule.h  duploadtaskdata.cpp  duploadtaskdata.h
calendar-service/src/dbmanager/: daccountdatabase.cpp  daccountdatabase.h  daccountmanagerdatabase.cpp  daccountmanagerdatabase.h  ddatabase.cpp  ddatabase.h  ddatabasemanagement.cpp  ddatabasemanagement.h  dhuanglidatabase.cpp  dhuanglidatabase.h  huanglidatabase.cpp  huanglidatabase.h  schedulerdatabase.cpp  schedulerdatabase.h
calendar-service/src/dbus/: dbusbase.cpp  dbusbase.h  dbusnotify.cpp  dbusnotify.h  dbusuiopenschedule.cpp  dbusuiopenschedule.h  dunioniddbus.cpp  dunioniddbus.h
calendar-service/src/dbusservice/: daccountmanagerservice.cpp  daccountmanagerservice.h  daccountservice.cpp  daccountservice.h  dhuangliservice.cpp  dhuangliservice.h  dservicebase.cpp  dservicebase.h  dservicemanager.cpp  dservicemanager.h
calendar-service/src/lunarandfestival/: celestialbodies.cpp  celestialbodies.h  lunarandfestival.h  lunarcalendar.cpp  lunarcalendar.h  lunardateinfo.cpp  lunardateinfo.h  lunarmanager.cpp  lunarmanager.h  method_interface.cpp  method_interface.h
calendar-service/src/pinyin/: pinyindict.cpp  pinyindict.h  pinyindict1.cpp  pinyindict1.h  pinyindict2.cpp  pinyindict2.h  pinyindict3.cpp  pinyindict3.h  pinyindict_00.cpp  pinyindict_01.cpp  pinyindict_02.cpp  pinyindict_03.cpp  pinyindict_04.cpp  pinyindict_05.cpp  pinyindict_06.cpp  pinyindict_07.cpp  pinyindict_08.cpp  pinyindict_09.cpp  pinyindict_10.cpp  pinyindict_11.cpp  pinyindict_12.cpp  pinyindict_13.cpp  pinyindict_14.cpp  pinyindict_15.cpp  pinyindict_16.cpp  pinyindict_17.cpp  pinyindict_18.cpp  pinyindict_19.cpp  pinyindict_20.cpp  pinyinsearch.cpp  pinyinsearch.h
calendar-service/src/synchronization/: dataencrypt.cpp  dataencrypt.h  dbuscloudsync.cpp  dbuscloudsync.h  syncfilemanage.cpp  syncfilemanage.h  syncoperation.cpp  syncoperation.h
calendar-service/src/unionIDDav/: ddatasyncbase.cpp  ddatasyncbase.h  dsyncdatafactory.cpp  dsyncdatafactory.h  dunioniddav.cpp  dunioniddav.h  dunioniddav_p.h
src/: CMakeLists.txt  SchecduleRemindWidget.cpp  SchecduleRemindWidget.h  accessible.h  alldayeventview.cpp  alldayeventview.h  alldayschceduleview.cpp  alldayschceduleview.h  alldayschceduleweekview.cpp  alldayschceduleweekview.h  animationstackedwidget.cpp  animationstackedwidget.h  calendardbus.cpp  calendardbus.h  calendarmainwindow.cpp  calendarmainwindow.h  calendartimeeidt.cpp  calendartimeeidt.h  calendarview.cpp  calendarview.h  calendarwindow.cpp  calendarwindow.h  cayearmonthedit.cpp  cayearmonthedit.h  cdynamicicon.cpp  cdynamicicon.h  configsettings.cpp  configsettings.h  constants.h  creatorparschedule.cpp  creatorparschedule.h  customcalendarwidget.cpp  customcalendarwidget.h  customframe.cpp  customframe.h  dayhuangliview.cpp  dayhuangliview.h  daymonthview.cpp  daymonthview.h  daywindow.cpp  (+86 more)
src/accessible/: accessible.h
src/customWidget/: SchecduleRemindWidget.cpp  SchecduleRemindWidget.h  animationstackedwidget.h  customframe.cpp  scheduleview.cpp  scheduleview.h  todybutton.cpp  todybutton.h
src/dataManage/: schedulecoormanage.h
src/dbus/: schedulesdbus.cpp  schedulesdbus.h
src/dialog/: myschceduleview.h  schceduledlg.cpp  schceduledlg.h
src/logPrint/: DebugTimeManager.h
src/view/: draginfographicsview.cpp  draginfographicsview.h  graphicsview.cpp  graphicsview.h  monthgraphiview.cpp  monthgraphiview.h  scheduleitem.cpp
src/widget/: calendarmainwindow.cpp  calendarmainwindow.h  schcedulesearchview.cpp  schcedulesearchview.h
src/widget/dayWidget/: dayhuangliview.cpp  daymonthview.cpp  daymonthview.h  daywindow.h
src/widget/monthWidget/: monthdayview.cpp  monthdayview.h  monthschceduleview.cpp  monthschceduleview.h  monthview.cpp  monthview.h  monthweekview.cpp  monthwindow.h
src/widget/weekWidget/: weekheadview.cpp  weekheadview.h  weekwindow.cpp
src/widget/yearWidget/: yearschceduleview.h  yearview.cpp  yearview.h  yearwindow.h
test/: CMakeLists.txt  cmake-lcov-test.sh
test/dde-calendar-client-test/: CMakeLists.txt
test/dde-calendar-service-test/: CMakeLists.txt
(+843 files in other folders)
